[gd_scene load_steps=7 format=3 uid="uid://c5b6of8582oh4"]

[ext_resource type="Script" path="res://Scenes/animal/animal.gd" id="1_iflxm"]
[ext_resource type="Texture2D" uid="uid://4paq1mul2d3r" path="res://assets/player/parrot.png" id="1_ns10b"]
[ext_resource type="Texture2D" uid="uid://btv16pgifur75" path="res://assets/items/arrow.png" id="3_8yrrt"]
[ext_resource type="AudioStream" uid="uid://y2m0aexjs0wu" path="res://assets/audio/stretch2.ogg" id="4_l47b0"]
[ext_resource type="AudioStream" uid="uid://ik5plllgrnw4" path="res://assets/audio/catapult.ogg" id="5_g0vtd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wvckf"]
radius = 19.0263

[node name="Animal" type="RigidBody2D"]
input_pickable = true
freeze = true
script = ExtResource("1_iflxm")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_ns10b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wvckf")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(1.92, 1.92)

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_8yrrt")
offset = Vector2(150, 0)

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_l47b0")
volume_db = -25.0

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_g0vtd")
volume_db = -25.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="onScreenExited"]
